docs: adapt to new requirements

--- a/docs/report.tex
+++ b/docs/report.tex
@@ -293,7 +293,7 @@
 
         В ходе работы была написана демонстрационная программа, позволяющая исследовать динамику модели Изинга и получать макроскопические характеристики системы при разных температурах.
 
-        Результаты моделирования совпадают с ожидаемыми.
+        При помощи полученной модели был смоделирован фазовый переход второго рода в ферро- и антиферромагнетике. Вычисленная температура фазового перехода оказалась близка к теоретической. Характерный вид зависимостей макроскопических параметров от времени также схож с известным для реальных ферромагнетиков.
 
     \clearpage
 
